[package]
name = "wpa_supplicant_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-drives = "0.5.0"
sysinfo = "0.28.4"
thiserror = "1.0.40"
fancy-regex = "0.11.0"
winreg = "0.11.0"
eframe = "0.21.3"
native-dialog = "0.6.3"